2006-10-03	kaffeetisch

	* CodeGen.pm, GenPod.pm, ParseXSDoc.pm: Fix POD errors.  (Mainly
	=cut's not followed by a blank line.)

2006-09-13	kaffeetisch

	* GBoxed.xs (gperl_new_boxed_copy): Check for NULL before passing
	the boxed pointer to g_boxed_copy.

	* GType.xs: Add macros, PORTABLE_STRTOLL and PORTABLE_STRTOULL, to
	centralize the preprocessor madness for 64bit integer support.  On
	win32, which apparently lacks strtoll or similar, use strtol and
	strtoul for now to make it at least compile.

	* t/7.t: Apply a patch from Michael G Schwern that introduces
	helper functions which make this complicated test easier to read.

	* t/filename.t: Remove two debug prints that were causing perl
	warnings.

2006-09-09	kaffeetisch

	* t/4.t, t/5.t, t/6.t, t/7.t, t/9.t: In hand-rolled test output,
	use '-' instead of '#' as the comment designator.  In TAP (Test
	Anything Protocol), the protocol we use, '#' is for directives and
	'-' is for comments.

2006-09-04	kaffeetisch

	* Glib.pm, Makefile.PL, NEWS, README: Stable release 1.140.

2006-09-04	kaffeetisch

	* t/9.t: Don't test Glib::main_depth on glib <= 2.4.0, where it
	first appeared.

	* t/g.t: Fix skip count.

2006-08-29	kaffeetisch

	* README: Add a bug reports section.

2006-08-07	kaffeetisch

	* Glib.pm, NEWS, README: Unstable release 1.132.

2006-08-07	kaffeetisch

	* GKeyFile.xs, Glib.xs: Remove outdated FIXME comments.

	* GMainLoop.xs (async_watcher_install): Add FIXME comment about a
	leak.

	* GObject.xs: Remove FIXME comment about gperl_object_check_type's
	semantics.  We can't do anything about anymore.

	* GSignal.xs (foreach_closure_matched): Fix to use guint instead
	of int for the return type.

	* Glib.pm: Don't use indirect object syntax.

	* TODO: Update.

	* typemap: Add custom typemaps for guchar* to avoid compiler
	warnings.

	* t/g.t: Change version checks to refer to stable releases only.

2006-07-23	kaffeetisch

	* Glib.pm, Makefile.PL, NEWS, README: Unstable release 1.131.
